Implemnted Test cases and Fixed Sonar issues